--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -28,14 +28,14 @@
   "info-card#button-left":{
     "props":{
       "isFullModeStyle":false,
+      "textPosition":"left",
+      "imageUrl":"https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "headline":"Shining chrome",
       "subhead":"Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-      "textPosition":"LEFT",
-      "textAlignment":"center",
-      "imageUrl":"https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
       "callToActionMode":"link",
       "callToActionText":"Go to Collection",
-      "callToActionUrl":"/sale/d"
+      "callToActionUrl":"/sale/d",
+      "textAlignment":"center"
     }
   }
 }
