--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -50,7 +50,9 @@
     "children":[
       "product-images",
       "product-brand"
-    ],
+    ]
+  },
+  "product-brand":{
     "props":{
       "displayMode":"logo",
       "height":30
