--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -21,8 +21,8 @@
   },
   "flex-layout#results":{
     "children":[
-      "flex-layout.col#filter",
-      "flex-layout.col#search"
+      "flex-layout.col#left",
+      "flex-layout.col#right"
     ]
   },
   "flex-layout.row#top": {
@@ -31,7 +31,7 @@
       "order-by.v2"
     ]
   },
-  "flex-layout.col#filter":{
+  "flex-layout.col#left":{
     "children":[
       "filter-navigator.v3"
     ],
@@ -39,7 +39,7 @@
       "width":"20%"
     }
   },
-  "flex-layout.col#search":{
+  "flex-layout.col#right":{
     "children":[
       "search-content"
     ]
