--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -21,8 +21,8 @@
   },
   "flex-layout#results":{
     "children":[
-      "flex-layout.col#left",
-      "flex-layout.col#right"
+      "flex-layout.col#filter",
+      "flex-layout.col#search"
     ]
   },
   "flex-layout.row#top": {
